--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -1,30 +1,62 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ccff5244-db45-48a3-894b-8d948aca0027",
+   "cell_type": "markdown",
+   "id": "51a407b0-dfa5-4edb-86d4-09ffbc6e5452",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"hello World\"\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"hello World\")"
+    "# STAT 201 Project Proposal\n",
+    "\n",
+    " *Group members: Calvin Choi & Mikel Ibarra*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc6acc0-5c82-401f-b2ab-26c1bc16f7b6",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "341b38c8-27c0-4433-9bb3-a23c9fa1dcea",
+   "metadata": {},
+   "source": [
+    "## Preliminary results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c06bad8f-c0da-4026-a48e-b140663f0bf4",
+   "id": "ed48662f-ca53-4796-a2fc-934c7d6b819f",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372aae38-af79-4876-848e-379cb353aaf0",
+   "metadata": {},
+   "source": [
+    "## Methods Plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2cbe267-949b-4067-8f11-8313a0b0d2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c838e8-2d38-47b9-a76e-b2996c8b4bfd",
+   "metadata": {},
+   "source": [
+    "## Refferences"
+   ]
   }
  ],
  "metadata": {
