--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -49,8 +49,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ba541fd-40a3-46a9-9c5d-ced4c78889f3",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6fcf4651-bc60-46ac-87a1-d4da0fb82d06",
    "metadata": {},
    "outputs": [
@@ -168,7 +174,33 @@
    "id": "41c4083e-91f0-4df3-bb55-90d4c1d44ab4",
    "metadata": {},
    "source": [
-    "Here we can see each individual column corresponds to one of the following attributes:"
+    "Here we can see each individual column corresponds to one of the following attributes:\n",
+    "\n",
+    "- Attribute 1 : Unique user id\n",
+    "- Attribute 2 : Average ratings on churches\n",
+    "- Attribute 3 : Average ratings on resorts\n",
+    "- Attribute 4 : Average ratings on beaches\n",
+    "- Attribute 5 : Average ratings on parks\n",
+    "- Attribute 6 : Average ratings on theatres\n",
+    "- Attribute 7 : Average ratings on museums\n",
+    "- Attribute 8 : Average ratings on malls\n",
+    "- Attribute 9 : Average ratings on zoo\n",
+    "- Attribute 10 : Average ratings on restaurants\n",
+    "- Attribute 11 : Average ratings on pubs/bars\n",
+    "- Attribute 12 : Average ratings on local services\n",
+    "- Attribute 13 : Average ratings on burger/pizza shops\n",
+    "- Attribute 14 : Average ratings on hotels/other lodgings\n",
+    "- Attribute 15 : Average ratings on juice bars\n",
+    "- Attribute 16 : Average ratings on art galleries\n",
+    "- Attribute 17 : Average ratings on dance clubs\n",
+    "- Attribute 18 : Average ratings on swimming pools\n",
+    "- Attribute 19 : Average ratings on gyms\n",
+    "- Attribute 20 : Average ratings on bakeries\n",
+    "- Attribute 21 : Average ratings on beauty & spas\n",
+    "- Attribute 22 : Average ratings on cafes\n",
+    "- Attribute 23 : Average ratings on view points\n",
+    "- Attribute 24 : Average ratings on monuments\n",
+    "- Attribute 25 : Average ratings on gardens"
    ]
   },
   {
