--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -15,7 +15,49 @@
    "execution_count": null,
    "id": "ff57672c-2e52-43b9-ae76-f566a4002f33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered S3 method overwritten by 'GGally':\n",
+      "  method from   \n",
+      "  +.gg   ggplot2\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘gridExtra’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine\n",
+      "\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.8     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.1     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.2\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mgridExtra\u001b[39m::\u001b[32mcombine()\u001b[39m masks \u001b[34mdplyr\u001b[39m::combine()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m      masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m         masks \u001b[34mstats\u001b[39m::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading libraries\n",
     "library(readxl)\n",
@@ -37,7 +79,12 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "\n"
+    "\n",
+    "With the interconnected nature of the internet, one prominent feature is the use of \"review\" websites or platforms, with there being a wide variety of review platforms for different things. Goodreads for books, Trip Advisor for hotels and restaurants, Letterboxd for movies and tv shows, and a multitude of others. One of the most commmon of these websites is Google, as it provides a platform to review almost anything, from a pool to a park to a zoo. The UCI Travel Review Ratings Data Set (https://archive.ics.uci.edu/ml/datasets/Tarvel+Review+Ratings#) compiles the ratings from different users across a wide range of places. It includes two types of places which we will be looking at: dance clubs and pubs/bars, both being integral to nightlife within cities.\n",
+    "\n",
+    "However, one might ask, what value do online reviews hold? When analyzing them, studies have found that online reviews function as a sort of online word of mouth advertising. Weejing Duan, Bin Gu, and Andrew B. Whinston found the extent to which online reviews affected businesses, with them affecting box office numbers, but also being affected by sales of a product (Duan et al., 2008). Online ratings are so impactful, that entire studies, such as the one conducted by Daniel Keller & Maria Kostrominita, centered around giving businesses the best possible route to improving their scores on websites. The mentioned study found critical areas to focus on, such as food quality, service, and over all experience, but also highlighted how not all of these are equally important (Keller & Kostromitina, 2020).\n",
+    "\n",
+    "From this, we are looking to answer the following question: Between pubs/restaurants and dance club, which of the two has lower ratings? The reason as to why we're asking this is because through our findings, our results could be interpreted as indicators for advertisement companies for which of the two kinds of location they should focus on. Possibly, it could also be an indicator for tourism companies or organizations as to what kinds of businesses need more help with advertising."
    ]
   },
   {
@@ -52,120 +99,22 @@
    "cell_type": "markdown",
    "id": "8ba541fd-40a3-46a9-9c5d-ced4c78889f3",
    "metadata": {},
-   "source": []
+   "source": [
+    "First, we read the dataset from the website, and remove any unnecessary rows"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6fcf4651-bc60-46ac-87a1-d4da0fb82d06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[22mNew names:\n",
-      "\u001b[36m•\u001b[39m `` -> `...26`\n",
-      "Warning message:\n",
-      "“One or more parsing issues, see `problems()` for details”\n",
-      "\u001b[1mRows: \u001b[22m\u001b[34m5456\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m26\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m  (1): User\n",
-      "\u001b[32mdbl\u001b[39m (24): Category 1, Category 2, Category 3, Category 4, Category 5, Catego...\n",
-      "\u001b[33mlgl\u001b[39m  (1): ...26\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 25</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>User</th><th scope=col>Category 1</th><th scope=col>Category 2</th><th scope=col>Category 3</th><th scope=col>Category 4</th><th scope=col>Category 5</th><th scope=col>Category 6</th><th scope=col>Category 7</th><th scope=col>Category 8</th><th scope=col>Category 9</th><th scope=col>⋯</th><th scope=col>Category 15</th><th scope=col>Category 16</th><th scope=col>Category 17</th><th scope=col>Category 18</th><th scope=col>Category 19</th><th scope=col>Category 20</th><th scope=col>Category 21</th><th scope=col>Category 22</th><th scope=col>Category 23</th><th scope=col>Category 24</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>User 1</td><td>0</td><td>0.0</td><td>3.63</td><td>3.65</td><td>5</td><td>2.92</td><td>5</td><td>2.35</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td>User 2</td><td>0</td><td>0.0</td><td>3.63</td><td>3.65</td><td>5</td><td>2.92</td><td>5</td><td>2.64</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td>User 3</td><td>0</td><td>0.0</td><td>3.63</td><td>3.63</td><td>5</td><td>2.92</td><td>5</td><td>2.64</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td>User 4</td><td>0</td><td>0.5</td><td>3.63</td><td>3.63</td><td>5</td><td>2.92</td><td>5</td><td>2.35</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td>User 5</td><td>0</td><td>0.0</td><td>3.63</td><td>3.63</td><td>5</td><td>2.92</td><td>5</td><td>2.64</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td>User 6</td><td>0</td><td>0.0</td><td>3.63</td><td>3.63</td><td>5</td><td>2.92</td><td>5</td><td>2.63</td><td>2.33</td><td>⋯</td><td>1.74</td><td>0.59</td><td>0.5</td><td>0</td><td>0.5</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 25\n",
-       "\\begin{tabular}{lllllllllllllllllllll}\n",
-       " User & Category 1 & Category 2 & Category 3 & Category 4 & Category 5 & Category 6 & Category 7 & Category 8 & Category 9 & ⋯ & Category 15 & Category 16 & Category 17 & Category 18 & Category 19 & Category 20 & Category 21 & Category 22 & Category 23 & Category 24\\\\\n",
-       " <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t User 1 & 0 & 0.0 & 3.63 & 3.65 & 5 & 2.92 & 5 & 2.35 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t User 2 & 0 & 0.0 & 3.63 & 3.65 & 5 & 2.92 & 5 & 2.64 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t User 3 & 0 & 0.0 & 3.63 & 3.63 & 5 & 2.92 & 5 & 2.64 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t User 4 & 0 & 0.5 & 3.63 & 3.63 & 5 & 2.92 & 5 & 2.35 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t User 5 & 0 & 0.0 & 3.63 & 3.63 & 5 & 2.92 & 5 & 2.64 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t User 6 & 0 & 0.0 & 3.63 & 3.63 & 5 & 2.92 & 5 & 2.63 & 2.33 & ⋯ & 1.74 & 0.59 & 0.5 & 0 & 0.5 & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 25\n",
-       "\n",
-       "| User &lt;chr&gt; | Category 1 &lt;dbl&gt; | Category 2 &lt;dbl&gt; | Category 3 &lt;dbl&gt; | Category 4 &lt;dbl&gt; | Category 5 &lt;dbl&gt; | Category 6 &lt;dbl&gt; | Category 7 &lt;dbl&gt; | Category 8 &lt;dbl&gt; | Category 9 &lt;dbl&gt; | ⋯ ⋯ | Category 15 &lt;dbl&gt; | Category 16 &lt;dbl&gt; | Category 17 &lt;dbl&gt; | Category 18 &lt;dbl&gt; | Category 19 &lt;dbl&gt; | Category 20 &lt;dbl&gt; | Category 21 &lt;dbl&gt; | Category 22 &lt;dbl&gt; | Category 23 &lt;dbl&gt; | Category 24 &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| User 1 | 0 | 0.0 | 3.63 | 3.65 | 5 | 2.92 | 5 | 2.35 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "| User 2 | 0 | 0.0 | 3.63 | 3.65 | 5 | 2.92 | 5 | 2.64 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "| User 3 | 0 | 0.0 | 3.63 | 3.63 | 5 | 2.92 | 5 | 2.64 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "| User 4 | 0 | 0.5 | 3.63 | 3.63 | 5 | 2.92 | 5 | 2.35 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "| User 5 | 0 | 0.0 | 3.63 | 3.63 | 5 | 2.92 | 5 | 2.64 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "| User 6 | 0 | 0.0 | 3.63 | 3.63 | 5 | 2.92 | 5 | 2.63 | 2.33 | ⋯ | 1.74 | 0.59 | 0.5 | 0 | 0.5 | 0 | 0 | 0 | 0 | 0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  User   Category 1 Category 2 Category 3 Category 4 Category 5 Category 6\n",
-       "1 User 1 0          0.0        3.63       3.65       5          2.92      \n",
-       "2 User 2 0          0.0        3.63       3.65       5          2.92      \n",
-       "3 User 3 0          0.0        3.63       3.63       5          2.92      \n",
-       "4 User 4 0          0.5        3.63       3.63       5          2.92      \n",
-       "5 User 5 0          0.0        3.63       3.63       5          2.92      \n",
-       "6 User 6 0          0.0        3.63       3.63       5          2.92      \n",
-       "  Category 7 Category 8 Category 9 ⋯ Category 15 Category 16 Category 17\n",
-       "1 5          2.35       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "2 5          2.64       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "3 5          2.64       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "4 5          2.35       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "5 5          2.64       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "6 5          2.63       2.33       ⋯ 1.74        0.59        0.5        \n",
-       "  Category 18 Category 19 Category 20 Category 21 Category 22 Category 23\n",
-       "1 0           0.5         0           0           0           0          \n",
-       "2 0           0.5         0           0           0           0          \n",
-       "3 0           0.5         0           0           0           0          \n",
-       "4 0           0.5         0           0           0           0          \n",
-       "5 0           0.5         0           0           0           0          \n",
-       "6 0           0.5         0           0           0           0          \n",
-       "  Category 24\n",
-       "1 0          \n",
-       "2 0          \n",
-       "3 0          \n",
-       "4 0          \n",
-       "5 0          \n",
-       "6 0          "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Reading the data into R & tidy the data\n",
+    "# Reading the data into R & cleaning it\n",
     "AStat <- read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00485/google_review_ratings.csv\") |>\n",
     "            # read csv from (https://archive.ics.uci.edu/ml/machine-learning-databases/00485/google_review_ratings.csv)\n",
     "    select(!...26)\n",
+    "\n",
     "head(AStat)"
    ]
   },
@@ -204,20 +153,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bb62e5-68f0-4200-bc8b-55633c067b23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AStat_filtered <- AStat |>\n",
+    "    select('Category 12', 'Category 18') |>\n",
+    "    rename(Bar_and_Pub_Rating = 'Category 12', DanceClub_Rating = 'Category 18') |>\n",
+    "    filter(Bar_and_Pub_Rating != 0, DanceClub_Rating != 0) #filter for venues with ratings in both categories\n",
+    "\n",
+    "head(AStat_filtered)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "372aae38-af79-4876-848e-379cb353aaf0",
+   "id": "100f8916-5693-4da1-bf95-6a4919e0a7cc",
    "metadata": {},
    "source": [
-    "## Methods: Plan"
+    "We selected the columns which were of importance to us, these being the Bar/Pub Rating column and the Dance Club column. We also filtered out any rows that had values of 0. Eventhough we do not have any confirmation as to wether or not these zeros come from a lack of input or if that is their rating, we decided to remove them since because they are averages, any instance in which there was a rating besides 0 it would show in the value being higher than 0, which can be observed in the data frame."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2cbe267-949b-4067-8f11-8313a0b0d2f3",
+   "id": "139fbfd6-3364-4a7b-8896-71a9367989c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mu_tb <- summarize(AStat_filtered, \"Mean Bar/Pub Rating\" = mean(Bar_and_Pub_Rating), \"Mean Dance Club Rating\" = mean(DanceClub_Rating))\n",
+    "st_tb <- summarize(AStat_filtered, 'Standard Deviation Bar/Pub Rating' = sd(Bar_and_Pub_Rating),\n",
+    "                   'Standard Deviation Dance Club Rating' = sd(DanceClub_Rating))\n",
+    "\n",
+    "mu_tb\n",
+    "st_tb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07bed4dd-441f-4348-b598-d446c58cfef2",
+   "metadata": {},
+   "source": [
+    "Here, we calculated the parameters of the population. We first calculated the µ values for both columns, and then the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "370ddef8-e773-4395-b0ab-ce648c088b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ggpairs(AStat_filtered)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372aae38-af79-4876-848e-379cb353aaf0",
+   "metadata": {},
+   "source": [
+    "## Methods: Plan\n",
+    "\n",
+    "Our preliminary results show us that the average reviewer rates bars higher than they rate dance clubs, we want to further investigate and analyze to see how true this hypothesis by doing a 2 sample t-test and potentially a regression analysis on the data we have using bootstrapping and sampling.\n",
+    "\n",
+    "Our hypotheses are as follows:\n",
+    "- Null : Mu Bar - Mu Dance <> 0\n",
+    "- Alternative : Mu Bar - Mu Dance <= 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,9 +229,9 @@
    "source": [
     "## Refferences\n",
     "\n",
-    "1. \n",
+    "1. Keller, D., &amp; Kostromitina, M. (2020). Characterizing non-chain Restaurants’ Yelp Star-Ratings: Generalizable findings from a representative sample of yelp reviews. International Journal of Hospitality Management, 86, 102440. https://doi.org/10.1016/j.ijhm.2019.102440 \n",
     "\n",
-    "2. "
+    "2. Duan, W., Gu, B., &amp; Whinston, A. B. (2008). Do online reviews matter? — an empirical investigation of panel data. Decision Support Systems, 45(4), 1007–1016. https://doi.org/10.1016/j.dss.2008.04.001 "
    ]
   }
  ],
